--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "13.5.4",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
