--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/auth": "^1.7.0",
+    "@firebase/firestore": "^4.5.1",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.10.0",
     "next": "13.5.4",
     "next-auth": "^4.24.7",
     "react": "^18",
