--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@firebase/auth": "^1.7.0",
     "@firebase/firestore": "^4.5.1",
+    "@reduxjs/toolkit": "^2.2.3",
     "dotenv": "^16.4.5",
     "firebase": "^10.10.0",
     "next": "13.5.4",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.1",
     "react-responsive": "^10.0.0"
   },
   "devDependencies": {
